--- a/src/blog-header/blog-header.component.html
+++ b/src/blog-header/blog-header.component.html
@@ -3,32 +3,10 @@
         <div class="container" style="opacity: 0.9;">
             <div class="p-5 text-center">
                 <h1 class="text-uppercase display-3">angular öğreniyorum</h1>
-                <h4>Angular,Html,Css3,Ts</h4>
-                <a href="" class="btn btn-outline-warning me-1">Bizi Takip Edin</a>
-                <a href="" class="btn btn-outline-danger me-1">Linkedin</a>
-                <a href="" class="btn btn-outline-primary me-1">Youtube</a>
-            </div>
-        </div>
-    </div>
-</header>
-<header id="header">
-    <div class="jumbotron text-white">
-        <div class="container">
-            <div class="p-5 text-center">
-                <h1 class="text-uppercase">angular öğreniyorum</h1>
-                <h4>Angular,Html,Css3,Ts</h4>
-                <a href="" class="btn btn-outline-primary"></a>
-            </div>
-        </div>
-    </div>
-</header>
-<header id="header">
-    <div class="jumbotron text-white">
-        <div class="container">
-            <div class="p-5 text-center">
-                <h1 class="text-uppercase">angular öğreniyorum</h1>
-                <h4>Angular,Html,Css3,Ts</h4>
-                <a href="" class="btn btn-outline-primary"></a>
+                <h4>ANGULAR,HTML,CSS3,TS</h4>
+                <a href="" class="btn btn-outline-warning me-2">Bizi Takip Edin</a>
+                <a href="" class="btn btn-outline-danger me-2">Linkedin</a>
+                <a href="" class="btn btn-outline-primary me-2">Youtube</a>
             </div>
         </div>
     </div>
